--- a/templates/tabs/lids.html
+++ b/templates/tabs/lids.html
@@ -24,14 +24,17 @@
         </li>
         {% for i in lids %}
         <li class="lid"  data-lid-id="{{ i.pk }}">
-            <span data-lid-id="{{ i.pk }}">
+            <span>
                 <a href="">{{ i.full_name }}</a>
             </span>
-            <span data-lid-id="{{ i.pk }}">
+            <span>
                 {{ i.phone }}
             </span>
-            <span data-lid-id="{{ i.pk }}">
+            <span data-data="{{ i.data }}">
                 {{ i.data|slice:":50" }}{% if i.data|length >= 50 %}...{% endif %}
+            </span>
+            <span class="d-none">
+                {{ i.pk }}
             </span>
         </li>
         {% endfor %}
@@ -46,17 +49,41 @@
 
             <h2 class="text-center pb-3">Yangi lid qo'shish</h2>
             <form method="post">{% csrf_token %}
+                <input type="hidden" value="create" name="command">
                 <label for="full-name" class="h5">Ism familiya</label>
                 <input type="text" name="full-name" class="form-control mb-3" id="full-name" required>
                 
                 <label for="phone" class="h5">Tel raqam</label>
                 <input type="text" name="phone" class="form-control mb-3" id="phone" required>
                 
-                <label for="phone" class="h5">Qo'shimcha ma'lumot</label>
-                <textarea name="data" id="" class="form-control mb-3 textarea" style="height: 150px;" required></textarea>
+                <label for="data" class="h5">Qo'shimcha ma'lumot</label>
+                <textarea name="data" id="data" class="form-control mb-3 textarea" style="height: 150px;" required></textarea>
 
                 <button class="btn btn-primary text-white" type="submit">Qo'shish</button>
             </form>
+        </div>
+    </div>
+
+    <div class="back d-none" data-modal-name="edit">
+        <div class="modal">
+            <div class="close" data-modal-id="edit">&times;</div>
+
+            <h2 class="text-center pb-3">Lidni yangilash</h2>
+            <form method="post">{% csrf_token %}
+                <input type="hidden" value="update" name="command">
+                <input type="hidden" value="" name="id" id="pk">
+                <label for="full-name2" class="h5">Ism familiya</label>
+                <input type="text" name="full-name" class="form-control mb-3" id="full-name2" required>
+                
+                <label for="phone2" class="h5">Tel raqam</label>
+                <input type="text" name="phone" class="form-control mb-3" id="phone2" required>
+                
+                <label for="data2" class="h5">Qo'shimcha ma'lumot</label>
+                <textarea name="data" id="data2" class="form-control mb-3 textarea" style="height: 150px;" required></textarea>
+
+                <button class="btn btn-primary text-white" type="submit">Yangilash</button>
+            </form>
+
         </div>
     </div>
 {% endblock %}
@@ -64,9 +91,9 @@
 
 {% block context %}
     <div id="context-menu">
-        <a href="#" class="context-button move">Guruhga o'tkazish</a>
-        <a href="#" class="context-button edit">Tahrirlash</a>
-        <a href="#" class="context-button delete">O'chirish</a>
+        <div class="context-button move open-modal" >Guruhga o'tkazish</div>
+        <div class="context-button edit open-modal" data-modal-id="edit">Tahrirlash</div>
+        <div class="context-button delete open-modal" >O'chirish</div>
     </div>
 {% endblock context %}
 
