--- a/templates/tabs/course.html
+++ b/templates/tabs/course.html
@@ -14,7 +14,7 @@
             <span class="h5">
                 Narxi
             </span>
-            <span>
+            <span class="h5">
                 Guruhlar soni
             </span>
         </li>
