--- a/templates/tabs/lids.html
+++ b/templates/tabs/lids.html
@@ -86,6 +86,22 @@
 
         </div>
     </div>
+
+    <div class="back d-none" data-modal-name="delete">
+        <div class="modal">
+            <div class="close" data-modal-id="delete">&times;</div>
+
+            <h2 class="text-center pb-3">Lidni o'chirish</h2>
+            <div class="center mb-3" id="lid-data">
+                Haqiqatdan ham <b><u>dd</u></b> ni <br>
+                o'chirmoqchimisiz?
+            </div>
+            <div class="d-flex">
+                <a class="_close" href="#">Bekor qilish</a>
+                <a class="delete" href="" id="delete-button">O'chirish</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 
@@ -93,7 +109,7 @@
     <div id="context-menu">
         <div class="context-button move open-modal" >Guruhga o'tkazish</div>
         <div class="context-button edit open-modal" data-modal-id="edit">Tahrirlash</div>
-        <div class="context-button delete open-modal" >O'chirish</div>
+        <div class="context-button delete open-modal" data-modal-id="delete">O'chirish</div>
     </div>
 {% endblock context %}
 
