--- a/accounts/templates/accounts/login-ec.html
+++ b/accounts/templates/accounts/login-ec.html
@@ -1,13 +1,11 @@
-{% load compress %}
 {% load static %}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% compress css %}
-    <link type="text/x-scss" href="{% static 'scss/login.scss' %}" rel="stylesheet" media="screen">
-    {% endcompress %}
+
+    <link  href="{% static 'css/login.css' %}" rel="stylesheet">
 
     <title>Document</title>
 
