--- a/templates/tabs/lids.html
+++ b/templates/tabs/lids.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
-{% load static %}{% load compress %}
+{% load static %}
 
 
 {% block title %}
-    {% compress css %}
-        <link type="text/x-scss" href="{% static 'scss\context.scss' %}" rel="stylesheet" media="screen">
-    {% endcompress css %}
+    <link href="{% static 'css\context.css' %}" rel="stylesheet" >
 {% endblock title %}
 
 {% block content %}
