--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 	{% endif %}
-	<div class="loader-back d-none">
+	<div class="loader-back">
 		<div class="loader"></div>
 	</div>
 	<header class="app-header fixed-top">
