--- a/static/css/context.css
+++ b/static/css/context.css
@@ -5,9 +5,9 @@ body {
 }
 html #context-menu,
 body #context-menu {
-  border: 1px solid rgb(191, 191, 191);
+  border: 1px solid #bfbfbf;
   position: fixed;
-  z-index: 10000;
+  z-index: 100000;
   background: #ffffff;
   border-radius: 5px;
   transform: scale(0);
@@ -17,8 +17,8 @@ body #context-menu {
 }
 html #context-menu .context-button,
 body #context-menu .context-button {
-  border-radius: inherit;
-  padding: 10px;
+  border-radius: 0px;
+  padding: 5px;
   box-sizing: border-box;
   display: block;
   box-sizing: border-box;
@@ -32,6 +32,8 @@ body #context-menu .context-button:hover {
 html #context-menu .move,
 body #context-menu .move {
   transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  border-top-right-radius: inherit;
+  border-top-left-radius: inherit;
 }
 html #context-menu .move:hover,
 body #context-menu .move:hover {
@@ -41,6 +43,8 @@ body #context-menu .move:hover {
 html #context-menu .delete,
 body #context-menu .delete {
   transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  border-bottom-right-radius: inherit;
+  border-bottom-left-radius: inherit;
 }
 html #context-menu .delete:hover,
 body #context-menu .delete:hover {
