--- a/templates/tabs/group.html
+++ b/templates/tabs/group.html
@@ -94,7 +94,7 @@
             </select>
 
             <label for="start-time" class="h5">Boshlanish vaqti</label>
-            <input type="time" class="form-control mb-3" id="start-time" name="start-time" onchange="change()" required>
+            <input type="time" class="form-control mb-3" id="start-time" name="start-time" onchange="change()" required  min="07:00" max="19:00">
     
             <label for="end-time" class="h5">Tugash vaqti</label>
             <input type="time" class="form-control mb-3" id="end-time" name="end-time" disabled>
